[tool.poetry]
name = "pyasf"
version = "0.2.10"
description = ""
authors = ["OliverTrust <letsfunbox@gmail.com>"]
readme = "README.md"
packages = [{ include = "pyasf" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pydantic = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"